[tool.poetry]
name = "doa-cli"
version = "2.4.0"
description = "Fontend CLI for Tackle-DiVA Database Operator Adaption (DOA) toolsuite."
authors = ["Shin Saito <shinsa82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
doa = 'doa_cli.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
