[tool.poetry]
name = "sqal"
version = "2.2.0"
description = "SQAL: SQL Analyzer Libraray for Assessment and Migration to PostgreSQL"
authors = ["Shin Saito <shinsa@jp.ibm.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.10"
more-itertools = "^8.12.0"
rich = "^12.2.0"
typer = "^0.4.1"
wasabi = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
